Fixing event highlight icons on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -214,14 +214,18 @@ body {
           justify-content: center; }
 
 .event-highlights--text h4 {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   text-align: center;
   color: #000000; }
 
 .event-highlights--text h6 {
-  margin-bottom: 0;
+  margin: 0 auto;
   text-align: center;
   color: #A6AAA9; }
+
+@media screen and (max-width: 839px) {
+  .event-highlights--text h6 {
+    margin-bottom: 25px; } }
 
 .event-highlights i {
   font-size: 62px;
@@ -231,6 +235,10 @@ body {
   left: calc(100% - 85%);
   padding: 44px 35px;
   color: #F39019; }
+
+@media screen and (min-width: 360px) and (max-width: 719px) {
+  .event-highlights i {
+    left: calc(100% - 81%); } }
 
 @media screen and (min-width: 720px) and (max-width: 959px) {
   .event-highlights i {
@@ -314,7 +322,7 @@ input {
   border-radius: 5px;
   background-color: #0063B1; }
 
-@media (min-width: 840px) {
+@media screen and (min-width: 840px) {
   .devday-register {
     padding: 10px; } }
 
@@ -329,7 +337,7 @@ input {
   background: white;
   box-shadow: inset 0 -2px #EBEBEB; }
 
-@media (min-width: 840px) {
+@media screen and (min-width: 840px) {
   .sign-up-input {
     margin: 0 10px 0 0; } }
 
